# gt-app

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  package.json
driver/: storage
driver/backup/storage/: HP-LaserJet-P1005.ppd  config
driver/boot/: System.map-5.4.0.old  config-5.15.0-105-generic  config-5.15.0-112-generic  config-5.4.0  config-5.4.0-56-generic  config-5.4.0.old  config-6.5.0-41-generic  initrd.img  initrd.img.old  vmlinuz  vmlinuz.old
driver/buster-amd64/buster-amd64/dev/: ftdi-2
driver/buster-amd64/buster-amd64/dev/block/: 179:16  179:24  179:25  179:8
driver/buster-amd64/buster-amd64/dev/char/: 238:0
driver/buster-amd64/buster-amd64/dev/disk/by-id/: mmc-APPSD_0x12800006-part1
driver/buster-amd64/buster-amd64/dev/disk/by-path/: pci-0000:00:15.0-usb-0:4:1.0-platform-rtsx_usb_sdmmc.1.auto
